Rensa interna länkar och städa kontaktstruktur

--- a/frontend/Kontakt/Sponsorer.html
+++ b/frontend/Kontakt/Sponsorer.html
@@ -37,7 +37,7 @@
 
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 8px 24px rgba(12,68,117,0.08);padding:24px;margin-bottom:18px;text-align:center;">
         <p style="margin:0 0 14px 0;color:#2f4c61;line-height:1.6;font-size:14px;">Vill du stötta vår verksamhet och bli en del av nätverket runt föreningen?</p>
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" target="_blank" rel="noopener noreferrer">Bli sponsor</a>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" rel="noopener noreferrer">Bli sponsor</a>
       </section>
     </div>
   </div>
