--- a/frontend/simskola/fritidskortet.html
+++ b/frontend/simskola/fritidskortet.html
@@ -189,7 +189,7 @@
 
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
               Fler kontaktvägar hittar du på vår
-              <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">
+              <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8; text-decoration:none; font-weight: 600;" rel="noopener noreferrer">
                 kontaktsida
               </a>.
             </p>
