--- a/frontend/simskola/simskolegrupper/simskolegrupper.html
+++ b/frontend/simskola/simskolegrupper/simskolegrupper.html
@@ -33,7 +33,7 @@
       <div style="display: flex; flex-wrap: wrap; gap: 6px; justify-content: center; align-items: flex-end; margin-bottom: 28px;">
         
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161878" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161878" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 28px; background: linear-gradient(180deg, #4CAF50 0%, #43A047 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(76, 175, 80, 0.3);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">1</span>
             </div>
@@ -42,7 +42,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161879" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161879" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 36px; background: linear-gradient(180deg, #4CAF50 0%, #43A047 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(76, 175, 80, 0.3);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">2</span>
             </div>
@@ -51,7 +51,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161880" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161880" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 44px; background: linear-gradient(180deg, #4CAF50 0%, #43A047 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(76, 175, 80, 0.3);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">3</span>
             </div>
@@ -60,7 +60,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161881" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161881" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 52px; background: linear-gradient(180deg, #2196F3 0%, #1E88E5 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(33, 150, 243, 0.3);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">4</span>
             </div>
@@ -69,7 +69,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161882" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161882" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 60px; background: linear-gradient(180deg, #2196F3 0%, #1E88E5 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(33, 150, 243, 0.3);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">5</span>
             </div>
@@ -78,7 +78,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161883" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161883" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 68px; background: linear-gradient(180deg, #2196F3 0%, #1E88E5 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(33, 150, 243, 0.3);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">6</span>
             </div>
@@ -87,7 +87,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161884" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161884" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 76px; background: linear-gradient(180deg, #2196F3 0%, #1E88E5 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(33, 150, 243, 0.3);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">7</span>
             </div>
@@ -96,7 +96,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; align-items: center;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161885" style="text-decoration: none; display: block;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161885" style="text-decoration: none; display: block;" rel="noopener noreferrer">
             <div style="width: 64px; height: 84px; background: linear-gradient(180deg, #FFC107 0%, #FFB300 100%); border-radius: 8px 8px 3px 3px; display: flex; align-items: center; justify-content: center; border: 1px solid rgba(255,255,255,0.5); box-shadow: 0 4px 16px rgba(255, 193, 7, 0.35);">
               <span style="color: white; font-size: 13px; font-weight: 700; text-shadow: 0 1px 2px rgba(0,0,0,0.2);">8</span>
             </div>
@@ -124,7 +124,7 @@
       <div style="padding: 16px 20px; background: linear-gradient(135deg, rgba(156, 39, 176, 0.1) 0%, rgba(156, 39, 176, 0.05) 100%); border-radius: 10px; border: 1px solid rgba(156, 39, 176, 0.2);">
         <p style="margin: 0; font-size: 14px; color: #5a5a5a; line-height: 1.5;">
           <strong style="color: #7B1FA2;">🦈 Hammarhajen</strong> - en anpassad grupp för barn med funktionsnedsättning eller särskilda behov. 
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161888" style="color: #0077c8; text-decoration: none;" target="_blank" rel="noopener noreferrer">Läs mer →</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161888" style="color: #0077c8; text-decoration: none;" rel="noopener noreferrer">Läs mer →</a>
         </p>
       </div>
     </div>
@@ -143,7 +143,7 @@
           <p style="margin: 0 0 10px 0; font-size: 13px; line-height: 1.5; color: #5a7a94;">
             Har ditt barn Fritidskortet? Det är ett statligt stöd för barn 7-16 år som kan användas till simskolan hos oss.
           </p>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=580304" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 16px; min-height: 40px; font-size: 14px; font-weight: 600; color: #005a99; background: white; border: 1px solid #005a99; border-radius: 8px; text-decoration: none;" target="_blank" rel="noopener noreferrer">
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=580304" style="display: inline-flex; align-items: center; justify-content: center; padding: 10px 16px; min-height: 40px; font-size: 14px; font-weight: 600; color: #005a99; background: white; border: 1px solid #005a99; border-radius: 8px; text-decoration: none;" rel="noopener noreferrer">
             Läs mer om Fritidskortet
           </a>
         </div>
@@ -155,7 +155,7 @@
           För många barn är <strong style="color: #92400e;">Baddaren</strong> en bra start - det är vår mest populära nybörjargrupp.
         </p>
         <p style="margin: 0; font-size: 14px; color: #78350f;">
-          <a href="https://ljungbyss.web.sportadmin.se/?SID=53193" style="color: #0077c8; text-decoration: none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Kontakta oss</a> så hjälper vi dig att hitta rätt grupp för ditt barn.
+          <a href="https://ljungbyss.web.sportadmin.se/?SID=53193" style="color: #0077c8; text-decoration: none; font-weight: 600;" rel="noopener noreferrer">Kontakta oss</a> så hjälper vi dig att hitta rätt grupp för ditt barn.
         </p>
       </div>
     </div>
@@ -293,11 +293,11 @@
       </details>
       <details style="margin:0 0 10px 0;">
         <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur vet jag vilken nivå mitt barn ska börja på?</summary>
-        <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Har barnet aldrig gått simskola? Börja med <strong style="color:#005a99;">Baddaren</strong> (från ca 4 år). Yngre barn (från 2 år) med förälder börjar i <strong style="color:#005a99;">Minisim</strong>. Osäker? <a href="https://ljungbyss.web.sportadmin.se/?SID=53193" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Kontakta oss</a> så hjälper vi dig.</p>
+        <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Har barnet aldrig gått simskola? Börja med <strong style="color:#005a99;">Baddaren</strong> (från ca 4 år). Yngre barn (från 2 år) med förälder börjar i <strong style="color:#005a99;">Minisim</strong>. Osäker? <a href="https://ljungbyss.web.sportadmin.se/?SID=53193" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Kontakta oss</a> så hjälper vi dig.</p>
       </details>
       <details style="margin:0 0 10px 0;">
         <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vad kostar simskolan?</summary>
-        <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Priserna varierar per grupp. Se aktuella avgifter på <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">sidan Avgifter</a>. Barn 7-16 år kan använda Fritidskortet.</p>
+        <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Priserna varierar per grupp. Se aktuella avgifter på <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">sidan Avgifter</a>. Barn 7-16 år kan använda Fritidskortet.</p>
       </details>
       <details style="margin:0 0 10px 0;">
         <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Måste jag vara med i vattnet?</summary>
@@ -313,29 +313,22 @@
       <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Relaterade sidor</h2>
       <p style="margin:0 0 12px 0;color:#2f4c61;line-height:1.6;font-size:14px;">För fler kontaktvägar och om du vill engagera dig i föreningen.</p>
       <div style="display:flex;gap:10px;flex-wrap:wrap;">
-        <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Bli ledare</a>
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=590922" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Hjälp till i LSS</a>
+        <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" rel="noopener noreferrer">Kontaktportal</a>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Kontaktuppgifter</a>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Bli ledare</a>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=590922" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Hjälp till i LSS</a>
       </div>
     </section>
 
     <div style="background: rgba(255,255,255,0.95); border-radius: 16px; border: 1px solid rgba(0,90,153,0.1); padding: 24px; margin-bottom: 28px; box-shadow: 0 8px 32px rgba(0,90,153,0.08);">
       <h3 style="margin: 0 0 10px 0; font-size: 18px; font-weight: 700; color: #005a99;">🏅 Vill du läsa mer om simmärken?</h3>
       <p style="margin: 0 0 10px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-        Vill du fördjupa dig i vilka simmärken barnen kan ta i simskolan? På sidan <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=179936" style="color: #0077c8; font-weight: 700; text-decoration: none;" target="_blank" rel="noopener noreferrer">Simmärken</a> hittar du en affisch med många olika märken samlade, till exempel för vattenvana, simsätt, hopp, distans och mer.
+        Vill du fördjupa dig i vilka simmärken barnen kan ta i simskolan? På sidan <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=179936" style="color: #0077c8; font-weight: 700; text-decoration: none;" rel="noopener noreferrer">Simmärken</a> hittar du en affisch med många olika märken samlade, till exempel för vattenvana, simsätt, hopp, distans och mer.
       </p>
       <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-        Om du är osäker på vilket märke eller nivå som passar ditt barn, <a href="https://ljungbyss.web.sportadmin.se/?SID=53193" style="color: #0077c8; font-weight: 700; text-decoration: none;" target="_blank" rel="noopener noreferrer">kontakta oss</a>, så hjälper vi gärna till.
+        Om du är osäker på vilket märke eller nivå som passar ditt barn, <a href="https://ljungbyss.web.sportadmin.se/?SID=53193" style="color: #0077c8; font-weight: 700; text-decoration: none;" rel="noopener noreferrer">kontakta oss</a>, så hjälper vi gärna till.
       </p>
     </div>
 </div>
 </div>
 </div>
-
-
-
-
-
-
-
