--- a/frontend/simskola/tider-perioder.html
+++ b/frontend/simskola/tider-perioder.html
@@ -29,9 +29,9 @@
                   Grupperna visas senast dagen innan bokningen öppnar och du behöver vara inloggad för att boka plats.
                 </p>
                 <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-                  <a href="https://www.ljungbyss.se/sida/?ID=161889" style="text-decoration:none; font-weight: 600; color:#0077c8" target="_blank" rel="noopener noreferrer">Avgifter</a>
+                  <a href="https://www.ljungbyss.se/sida/?ID=161889" style="text-decoration:none; font-weight: 600; color:#0077c8" rel="noopener noreferrer">Avgifter</a>
                   <span style="color: #555"> och </span>
-                  <a href="https://www.ljungbyss.se/sida/?ID=591089" style="text-decoration:none; font-weight: 600; color:#0077c8" target="_blank" rel="noopener noreferrer">Kontakt</a>
+                  <a href="https://www.ljungbyss.se/sida/?ID=591089" style="text-decoration:none; font-weight: 600; color:#0077c8" rel="noopener noreferrer">Kontakt</a>
                   <span style="color: #555"> om du behöver hjälp.</span>
                 </p>
               </div>
@@ -39,7 +39,7 @@
                 <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; border-radius:6px; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); color: #fff; text-decoration: none; font-weight: 700; text-align: center; font-size:15px; box-shadow: 0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
                   Boka simskola
                 </a>
-                <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display: flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; border-radius:6px; background: rgba(255,255,255,0.9); color: #0077c8; text-decoration: none; font-weight: 600; border:1px solid rgba(0,90,153,0.12); text-align: center; font-size:15px; box-shadow:0 8px 24px rgba(12,68,117,0.08);" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display: flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; border-radius:6px; background: rgba(255,255,255,0.9); color: #0077c8; text-decoration: none; font-weight: 600; border:1px solid rgba(0,90,153,0.12); text-align: center; font-size:15px; box-shadow:0 8px 24px rgba(12,68,117,0.08);" rel="noopener noreferrer">
                   Osäker på nivå? Se grupperna
                 </a>
               </div>
@@ -244,7 +244,7 @@
               </a>
             </div>
             <p style="margin:10px 0 0 0;font-size:14px;line-height:1.6;color:#5f7a8f;">
-              Frågor? <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;text-decoration:none;font-weight:600;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
+              Frågor? <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;text-decoration:none;font-weight:600;" rel="noopener noreferrer">Kontaktportal</a>
             </p>
             <p style="margin:10px 0 0 0;color:#5f7a8f;font-size:13px;line-height:1.6;">Tider kan uppdateras under terminen. Kontrollera alltid den här sidan för senaste information.</p>
           </div>
