--- a/frontend/simskola/vanligt-stallda-fragor.html
+++ b/frontend/simskola/vanligt-stallda-fragor.html
@@ -11,11 +11,11 @@
         <p style="margin:0 0 10px 0;color:#5f7a8f;line-height:1.6;font-size:14px;">Detta gäller innan terminen börjar och inför val av grupp.</p>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">När startar terminerna?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Termin 1 startar i januari och termin 2 startar i september. En termin omfattar normalt 12 lektionstillfällen. Se <a href="https://www.ljungbyss.se/sida/?ID=332769" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Tider och perioder</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Termin 1 startar i januari och termin 2 startar i september. En termin omfattar normalt 12 lektionstillfällen. Se <a href="https://www.ljungbyss.se/sida/?ID=332769" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Tider och perioder</a>.</p>
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur gammal behöver barnet vara för Minisim?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Vi rekommenderar från cirka 2 år. Viktigast är att barnet är moget att delta i grupp. Läs mer på sidan <a href="https://www.ljungbyss.se/sida/?ID=161878" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Minisim</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Vi rekommenderar från cirka 2 år. Viktigast är att barnet är moget att delta i grupp. Läs mer på sidan <a href="https://www.ljungbyss.se/sida/?ID=161878" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Minisim</a>.</p>
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Är förälder med i vattnet?</summary>
@@ -40,11 +40,11 @@
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur vet jag vilken nivå jag ska välja?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Läs nivåbeskrivningarna under <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>. Är du osäker kan kansliet hjälpa till med rekommendation.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Läs nivåbeskrivningarna under <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Simskolegrupper</a>. Är du osäker kan kansliet hjälpa till med rekommendation.</p>
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Kan jag byta om jag råkar boka fel grupp?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Ja, men bytet görs via kansliet. Du kan inte ändra bokningen själv i efterhand. Använd <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Ja, men bytet görs via kansliet. Du kan inte ändra bokningen själv i efterhand. Använd <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Kontaktportal</a>.</p>
         </details>
         <details style="margin:0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Finns kösystem?</summary>
@@ -57,15 +57,15 @@
         <p style="margin:0 0 10px 0;color:#5f7a8f;line-height:1.6;font-size:14px;">Detta gäller betalningssätt, medlemsavgift och återbetalningsregler.</p>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vilka betalningssätt finns?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Betalning hanteras via Qvickly med kort, faktura eller delbetalning. Se även <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Avgifter</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Betalning hanteras via Qvickly med kort, faktura eller delbetalning. Se även <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Avgifter</a>.</p>
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur ofta betalas medlemsavgiften?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Medlemsavgiften är 250 kr och betalas en gång per kalenderår. Läs detaljer på <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Avgifter</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Medlemsavgiften är 250 kr och betalas en gång per kalenderår. Läs detaljer på <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Avgifter</a>.</p>
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Vad gäller vid avbokning?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Mer än 20 dagar före kursstart: återbetalning minus 100 kr administrationsavgift. Mindre än 20 dagar: full avgift debiteras. Se full villkorstext på <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Avgifter</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Mer än 20 dagar före kursstart: återbetalning minus 100 kr administrationsavgift. Mindre än 20 dagar: full avgift debiteras. Se full villkorstext på <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Avgifter</a>.</p>
         </details>
         <details style="margin:0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Kan man få ersättning vid sjukdom?</summary>
@@ -78,7 +78,7 @@
         <p style="margin:0 0 10px 0;color:#5f7a8f;line-height:1.6;font-size:14px;">Detta gäller lektioner, utrustning, byten och stöd under terminen.</p>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Hur lång är en lektion?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Baddaren till Pingvinen: cirka 30 minuter. Fisken och Hajen: cirka 60 minuter. Läs nivåerna under <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Baddaren till Pingvinen: cirka 30 minuter. Fisken och Hajen: cirka 60 minuter. Läs nivåerna under <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Simskolegrupper</a>.</p>
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Måste barnet ha särskild utrustning?</summary>
@@ -86,11 +86,11 @@
         </details>
         <details style="margin:0 0 10px 0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Kan man byta tid eller nivå under terminen?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Ja, i mån av plats. Kontakta kansliet så hjälper vi dig via <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Ja, i mån av plats. Kontakta kansliet så hjälper vi dig via <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Kontaktportal</a>.</p>
         </details>
         <details style="margin:0;">
           <summary style="font-size:15px;font-weight:700;color:#2f4c61;cursor:pointer;">Mitt barn behöver särskilt stöd, hur gör vi?</summary>
-          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Kontakta kansliet innan bokning så planerar vi bästa möjliga upplägg tillsammans via <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>. För anpassad verksamhet, se <a href="https://www.ljungbyss.se/sida/?ID=161888" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Hammarhajen</a>.</p>
+          <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Kontakta kansliet innan bokning så planerar vi bästa möjliga upplägg tillsammans via <a href="https://www.ljungbyss.se/sida/?ID=591089" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Kontaktportal</a>. För anpassad verksamhet, se <a href="https://www.ljungbyss.se/sida/?ID=161888" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">Hammarhajen</a>.</p>
         </details>
       </section>
 
@@ -98,8 +98,8 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Snabblänkar</h2>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
           <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" target="_blank" rel="noopener noreferrer">Boka simskola</a>
-          <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #dde9f5;text-decoration:none;font-size:15px;font-weight:600;background:#f5fbff;color:#005a99;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>
-          <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #dde9f5;text-decoration:none;font-size:15px;font-weight:600;background:#f5fbff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
+          <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #dde9f5;text-decoration:none;font-size:15px;font-weight:600;background:#f5fbff;color:#005a99;" rel="noopener noreferrer">Simskolegrupper</a>
+          <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #dde9f5;text-decoration:none;font-size:15px;font-weight:600;background:#f5fbff;color:#005a99;" rel="noopener noreferrer">Kontaktportal</a>
         </div>
       </section>
     </div>
