--- a/frontend/Kontakt/Hjalp_Till_I_Lss.html
+++ b/frontend/Kontakt/Hjalp_Till_I_Lss.html
@@ -187,7 +187,7 @@
               <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Maila oss och skriv g&auml;rna &quot;Hj&auml;lp till i LSS&quot; i &auml;mnesraden. Ber&auml;tta kort vad du gillar att g&ouml;ra och hur mycket tid du vill l&auml;gga. Om knappen inte fungerar i din webbl&auml;sare kan du kopiera adressen under.</p>
               <div style="margin-top:14px;display:flex;align-items:center;gap:10px;flex-wrap:wrap;">
                 <a href="mailto:info@ljungbyss.se?subject=Hjalp%20till%20i%20LSS" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">&Ouml;ppna mailapp</a>
-                <a href="https://www.ljungbyss.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
+                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Kontaktuppgifter</a>
               </div>
               <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;">E-post: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
             </section>
@@ -197,15 +197,11 @@
               <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;letter-spacing:-0.2px;font-size:22px;">Relaterade sidor</h2>
               <p style="margin:0 0 12px 0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Mer information om engagemang och kontakt i föreningen.</p>
               <div style="display:flex;gap:10px;flex-wrap:wrap;">
-                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Bli ledare</a>
-                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
-                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
-                <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>
+                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" rel="noopener noreferrer">Bli ledare</a>
+                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Styrelsen</a>
+                <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Simskolegrupper</a>
               </div>
             </section>
     </div>
   </div>
 </div>
-
-
-
