--- a/frontend/Kontakt/Kontaktportal.html
+++ b/frontend/Kontakt/Kontaktportal.html
@@ -9,7 +9,7 @@
       <section style="border-radius:20px;background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);box-shadow:0 8px 22px rgba(12,68,117,0.14);padding:24px;margin-bottom:18px;color:#ffffff;">
         <h2 style="margin:0 0 10px 0;font-size:22px;line-height:1.3;color:#ffffff;">Behöver du svar direkt?</h2>
         <p style="margin:0 0 14px 0;line-height:1.6;font-size:14px;color:rgba(255,255,255,0.92);">Mejl: <strong>info@ljungbyss.se</strong><br>Telefon/SMS: <strong>072-218 2007</strong></p>
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#005a99;" target="_blank" rel="noopener noreferrer">Se kontaktuppgifter</a>
+        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#005a99;" rel="noopener noreferrer">Se kontaktuppgifter</a>
       </section>
 
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
@@ -24,19 +24,19 @@
           <article style="background:#ffffff;border:1px solid #dde9f5;border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(12,68,117,0.08);">
             <h3 style="margin:0 0 8px 0;color:#005a99;font-size:18px;line-height:1.25;">Frågor om simskola</h3>
             <p style="margin:0 0 12px 0;color:#2f4c61;line-height:1.6;font-size:14px;">Nivåer, tider, avgifter, simmärken och vanliga frågor.</p>
-            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" target="_blank" rel="noopener noreferrer">Läs mer</a>
+            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;" rel="noopener noreferrer">Läs mer</a>
           </article>
 
           <article style="background:linear-gradient(135deg,#0077c8 0%,#005a99 100%);border:1px solid rgba(0,119,200,0.25);border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(12,68,117,0.2);">
             <h3 style="margin:0 0 8px 0;color:#ffffff;font-size:18px;line-height:1.25;">Träna och tävla</h3>
             <p style="margin:0 0 12px 0;color:rgba(255,255,255,0.92);line-height:1.6;font-size:14px;">Träningsgrupper, schema, tävlingar och resultat.</p>
-            <a href="https://ljungbyss.web.sportadmin.se/start/?ID=161577" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#0077c8;" target="_blank" rel="noopener noreferrer">Utforska</a>
+            <a href="https://ljungbyss.web.sportadmin.se/start/?ID=161577" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#0077c8;" rel="noopener noreferrer">Utforska</a>
           </article>
 
           <article style="background:linear-gradient(135deg,#e67e22 0%,#d35400 100%);border:1px solid rgba(211,84,0,0.25);border-radius:20px;padding:16px;box-shadow:0 6px 18px rgba(211,84,0,0.2);">
             <h3 style="margin:0 0 8px 0;color:#ffffff;font-size:18px;line-height:1.25;">Bli ledare</h3>
             <p style="margin:0 0 12px 0;color:rgba(255,255,255,0.92);line-height:1.6;font-size:14px;">Gör skillnad i vattnet och skicka intresseanmälan.</p>
-            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#e67e22;" target="_blank" rel="noopener noreferrer">Anmäl intresse</a>
+            <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #ffffff;text-decoration:none;font-size:15px;font-weight:700;background:#ffffff;color:#e67e22;" rel="noopener noreferrer">Anmäl intresse</a>
           </article>
         </div>
       </section>
@@ -50,24 +50,17 @@
         </ul>
       </section>
 
-      <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
-        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Snabblänkar</h2>
-        <ul style="margin:0;padding-left:18px;line-height:1.8;color:#2f4c61;font-size:14px;">
-          <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Styrelse och ledare</a></li>
-          <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">Sponsorer</a></li>
-        </ul>
-      </section>
-
       <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
         <div style="width:52px;height:3px;border-radius:999px;background:#0077c8;opacity:0.75;margin:0 0 14px 0;"></div>
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Relaterade sidor</h2>
         <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Fördjupa dig i kontaktvägar, föreningen och engagemang.</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Om klubben</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Bli ledare</a>
-          <a href="https://www.ljungbyss.se/sida/?ID=161877" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Simskolegrupper</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" rel="noopener noreferrer">Kontaktuppgifter</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Styrelsen</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Om klubben</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161875" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Historia</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576223" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Bli ledare</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=590922" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Hjälp till i LSS</a>
         </div>
       </section>
     </div>
