--- a/frontend/Kontakt/Om_Klubben.html
+++ b/frontend/Kontakt/Om_Klubben.html
@@ -61,7 +61,7 @@
         </div>
         <p style="margin:0 0 8px 0;color:#35566d;font-size:14px;line-height:1.6;">E-post tävling/träning: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
         <p style="margin:0 0 10px 0;color:#35566d;font-size:14px;line-height:1.6;">E-post simskola: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">simskolan@ljungbyss.se</span></p>
-        <p style="margin:0;color:#2f4c61;font-size:14px;line-height:1.6;">Hemsida: <a href="https://www.ljungbyss.se" style="color:#0077c8;font-weight:600;text-decoration:none;" target="_blank" rel="noopener noreferrer">www.ljungbyss.se</a></p>
+        <p style="margin:0;color:#2f4c61;font-size:14px;line-height:1.6;">Hemsida: <a href="https://www.ljungbyss.se" style="color:#0077c8;font-weight:600;text-decoration:none;" rel="noopener noreferrer">www.ljungbyss.se</a></p>
       </section>
 
       <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
@@ -69,10 +69,10 @@
         <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Läs vidare</h2>
         <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Vill du se hur klubben arbetar idag och hur allt hänger ihop?</p>
         <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161875" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" target="_blank" rel="noopener noreferrer">Historia</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Styrelsen</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktuppgifter</a>
-          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" target="_blank" rel="noopener noreferrer">Kontaktportal</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=161875" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;" rel="noopener noreferrer">Historia</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576222" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Styrelsen</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576221" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Kontaktuppgifter</a>
+          <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=591089" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;" rel="noopener noreferrer">Kontaktportal</a>
         </div>
       </section>
     </div>
