--- a/frontend/simskola/avgifter.html
+++ b/frontend/simskola/avgifter.html
@@ -2,7 +2,7 @@
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:850px;margin:0 auto;">
       <div style="margin-bottom: 16px; font-size: 14px">
-            <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8; text-decoration:none; font-weight: 600" target="_blank" rel="noopener noreferrer">&#8592; Simskolan</a>
+            <a href="https://www.ljungbyss.se/sida/?ID=161877" style="color:#0077c8; text-decoration:none; font-weight: 600" rel="noopener noreferrer">&#8592; Simskolan</a>
           </div>
 
           <div style="background: rgba(255,255,255,0.85); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 36px 32px; margin-bottom:18px; box-shadow:0 8px 24px rgba(12,68,117,0.08);">
@@ -52,25 +52,25 @@
                 <tbody>
                   <tr style="background: #ffffff">
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; line-height: 1.6">
-                      <a href="https://www.ljungbyss.se/sida/?ID=161878" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Minisim</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161879" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Baddaren</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161880" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Sköldpaddan</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161881" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Bläckfisken</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161882" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Pingvinen</a>
+                      <a href="https://www.ljungbyss.se/sida/?ID=161878" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Minisim</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161879" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Baddaren</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161880" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Sköldpaddan</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161881" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Bläckfisken</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161882" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Pingvinen</a>
                     </td>
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; text-align: right; font-weight: 700; color: #1a1a1a; font-size: 15px">950 kr</td>
                   </tr>
                   <tr style="background: #f5fafd">
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; line-height: 1.6">
-                      <a href="https://www.ljungbyss.se/sida/?ID=161883" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Fisken steg 1</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161884" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Fisken steg 2</a>, 
-                      <a href="https://www.ljungbyss.se/sida/?ID=161885" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Hajen</a>
+                      <a href="https://www.ljungbyss.se/sida/?ID=161883" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Fisken steg 1</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161884" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Fisken steg 2</a>, 
+                      <a href="https://www.ljungbyss.se/sida/?ID=161885" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Hajen</a>
                     </td>
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; text-align: right; font-weight: 700; color: #1a1a1a; font-size: 15px">1 000 kr</td>
                   </tr>
                   <tr style="background: #ffffff">
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; line-height: 1.6">
-                      <a href="https://www.ljungbyss.se/sida/?ID=161888" style="text-decoration:none; color:#0077c8; font-weight: 500" target="_blank" rel="noopener noreferrer">Hammarhajen</a>
+                      <a href="https://www.ljungbyss.se/sida/?ID=161888" style="text-decoration:none; color:#0077c8; font-weight: 500" rel="noopener noreferrer">Hammarhajen</a>
                     </td>
                     <td style="padding: 14px 16px; border-bottom: 1px solid #eef4f8; text-align: right; font-weight: 700; color: #1a1a1a; font-size: 15px">800 kr</td>
                   </tr>
@@ -83,7 +83,7 @@
             </div>
             
             <p style="margin: 16px 0 0 0; line-height: 1.6; color: #5a7a94; font-size: 13px">
-              Osäker på nivå? Se <a href="https://www.ljungbyss.se/sida/?ID=161877" style="text-decoration:none; color:#0077c8; font-weight: 600" target="_blank" rel="noopener noreferrer">Simskolegrupper</a> för beskrivning av varje grupp.
+              Osäker på nivå? Se <a href="https://www.ljungbyss.se/sida/?ID=161877" style="text-decoration:none; color:#0077c8; font-weight: 600" rel="noopener noreferrer">Simskolegrupper</a> för beskrivning av varje grupp.
             </p>
           </div>
 
@@ -97,7 +97,7 @@
               </div>
               <div style="flex: 1 1 220px; min-width: 200px; background: linear-gradient(135deg, rgba(76,175,80,0.05) 0%, rgba(76,175,80,0.02) 100%); border-radius: 12px; padding: 16px; border: 1px solid rgba(76,175,80,0.1);">
                 <p style="margin: 0 0 4px 0; font-weight: 600; color: #1a1a1a">Fritidskortet</p>
-                <p style="margin: 0; line-height: 1.5; color: #5a7a94; font-size: 13px">Statligt stöd för barn 7-16 år &#183; <a href="https://www.ljungbyss.se/sida/?ID=580304" style="text-decoration:none; color:#0077c8; font-weight: 600" target="_blank" rel="noopener noreferrer">Läs mer</a></p>
+                <p style="margin: 0; line-height: 1.5; color: #5a7a94; font-size: 13px">Statligt stöd för barn 7-16 år &#183; <a href="https://www.ljungbyss.se/sida/?ID=580304" style="text-decoration:none; color:#0077c8; font-weight: 600" rel="noopener noreferrer">Läs mer</a></p>
               </div>
             </div>
           </div>
@@ -123,7 +123,7 @@
           </section>
 
           <p style="margin: 0; line-height: 1.6; text-align: center; color: #5a7a94; font-size: 14px">
-            Mer om simning: <a href="https://www.ljungbyss.se/sida/?ID=179936" style="text-decoration:none; color:#0077c8; font-weight: 600" target="_blank" rel="noopener noreferrer">Simmärken</a>
+            Mer om simning: <a href="https://www.ljungbyss.se/sida/?ID=179936" style="text-decoration:none; color:#0077c8; font-weight: 600" rel="noopener noreferrer">Simmärken</a>
           </p>
     </div>
   </div>
