--- a/frontend/simskola/simskolegrupper/fisken-steg-2.html
+++ b/frontend/simskola/simskolegrupper/fisken-steg-2.html
@@ -39,7 +39,7 @@
             <div style="flex: 1 1 calc(50% - 10px); min-width: 260px; background: rgba(255,255,255,0.95); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 24px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
               <h3 style="margin: 0 0 12px 0; font-size: 17px; font-weight: 700; color: #005a99;">📝 Anmälan</h3>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-                Bokning sker i SportAdmin när anmälan är öppen. Se <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Avgifter</a>.
+                Bokning sker i SportAdmin när anmälan är öppen. Se <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8; text-decoration:none; font-weight: 600;" rel="noopener noreferrer">Avgifter</a>.
               </p>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">Lektionstid: cirka 60 minuter (varav cirka 50 minuter i vattnet).</p>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">Bra att veta: Kom ombytt i tid, duscha före lektion och meddela längre frånvaro till kansliet.</p>
@@ -65,15 +65,15 @@
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
             <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🏅 Märken</h2>
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-              I Fisken Steg 2 jobbar vi mot simmärket Fisken 2. Se sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Simmärken</a>.
+              I Fisken Steg 2 jobbar vi mot simmärket Fisken 2. Se sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;" rel="noopener noreferrer">Simmärken</a>.
             </p>
           </div>
 
           <div style="display: flex; justify-content: space-between; padding-top: 20px;">
-            <a href="https://www.ljungbyss.se/sida/?ID=161883" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.ljungbyss.se/sida/?ID=161883" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" rel="noopener noreferrer">
               ← Fisken Steg 1
             </a>
-            <a href="https://www.ljungbyss.se/sida/?ID=161885" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.ljungbyss.se/sida/?ID=161885" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" rel="noopener noreferrer">
               Hajen →
             </a>
           </div>
