--- a/frontend/simskola/simskolegrupper/skoldpaddan.html
+++ b/frontend/simskola/simskolegrupper/skoldpaddan.html
@@ -38,7 +38,7 @@
             <div style="flex: 1 1 calc(50% - 10px); min-width: 260px; background: rgba(255,255,255,0.95); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 24px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
               <h3 style="margin: 0 0 12px 0; font-size: 17px; font-weight: 700; color: #005a99;">📝 Anmälan</h3>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-                Bokning sker i SportAdmin när anmälan är öppen. Se <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Avgifter</a>.
+                Bokning sker i SportAdmin när anmälan är öppen. Se <a href="https://www.ljungbyss.se/sida/?ID=161889" style="color:#0077c8; text-decoration:none; font-weight: 600;" rel="noopener noreferrer">Avgifter</a>.
               </p>
               <p style="margin: 0 0 18px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">Lektionstid: cirka 30 minuter (varav cirka 25 minuter i vattnet).</p>
               <a href="https://sportadmin.se/book/?F=98b32003-6ad5-4a0e-aa5d-a09facfc5dab" style="display: inline-flex; align-items: center; justify-content: center; padding:13px 24px; min-height:44px; font-size:15px; font-weight: 700; color: white; background: linear-gradient(135deg, #0077c8 0%, #005a99 100%); border-radius:6px; text-decoration: none; box-shadow: 0 4px 16px rgba(0,119,200,0.3);" target="_blank" rel="noopener noreferrer">
@@ -63,15 +63,15 @@
           <div style="background: rgba(255,255,255,0.9); border-radius:20px; border:1px solid rgba(0,90,153,0.12); padding: 32px; margin-bottom:18px; box-shadow:0 6px 20px rgba(0,90,153,0.07);">
             <h2 style="margin: 0 0 12px 0; font-size: 20px; font-weight: 700; color: #005a99;">🏅 Märken</h2>
             <p style="margin: 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
-              I Sköldpaddan jobbar vi mot simmärket Sköldpaddan från Svensk Simidrott. Vill du se en översikt över alla märken? Gå till sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;" target="_blank" rel="noopener noreferrer">Simmärken</a>.
+              I Sköldpaddan jobbar vi mot simmärket Sköldpaddan från Svensk Simidrott. Vill du se en översikt över alla märken? Gå till sidan <a href="https://www.ljungbyss.se/sida/?ID=179936" style="color:#0077c8; text-decoration:none; font-weight: 600;" rel="noopener noreferrer">Simmärken</a>.
             </p>
           </div>
 
           <div style="display: flex; justify-content: space-between; padding-top: 20px;">
-            <a href="https://www.ljungbyss.se/sida/?ID=161879" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.ljungbyss.se/sida/?ID=161879" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" rel="noopener noreferrer">
               ← Baddaren
             </a>
-            <a href="https://www.ljungbyss.se/sida/?ID=161881" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.ljungbyss.se/sida/?ID=161881" style="display: inline-flex; align-items: center; gap: 8px; padding:13px 24px; background: rgba(255,255,255,0.9); border:1px solid rgba(0,90,153,0.12); border-radius:6px; color: #0077c8; text-decoration: none; font-size:15px; font-weight: 600; box-shadow:0 6px 20px rgba(0,90,153,0.07);min-height:44px" rel="noopener noreferrer">
               Bläckfisken →
             </a>
           </div>
