Förbättra årsmötes-reminders med urgency, kollapsbara sektioner och layoutjusteringar

--- a/frontend/Meny.html
+++ b/frontend/Meny.html
@@ -262,6 +262,9 @@
         <h2><span class="badge">Hem</span> Grundsidor</h2>
         <ul class="links">
           <li><a class="link-item" href="./Hem/Webshop.html"><span class="link-title">Webshop</span><span class="path">Hem/Webshop.html</span></a></li>
+          <li><a class="link-item" href="./Inlagg%20Index/arsmote-2026-reminder.html"><span class="link-title">Årsmöte 2026 - Reminder</span><span class="path">Inlagg Index/arsmote-2026-reminder.html</span></a></li>
+          <li><a class="link-item" href="./Inlagg%20Index/arsmote-2026-reminder-5-dagar.html"><span class="link-title">Årsmöte 2026 - 5 dagar kvar</span><span class="path">Inlagg Index/arsmote-2026-reminder-5-dagar.html</span></a></li>
+          <li><a class="link-item" href="./Inlagg%20Index/arsmote-2026-reminder-24h.html"><span class="link-title">Årsmöte 2026 - 24 timmar kvar</span><span class="path">Inlagg Index/arsmote-2026-reminder-24h.html</span></a></li>
           <li><a class="link-item" href="./Hem/craft-community-hoodie.html"><span class="link-title">Craft - Community Hoodie</span><span class="path">Hem/craft-community-hoodie.html</span></a></li>
           <li><a class="link-item" href="./Hem/craft-evolve-full-zip.html"><span class="link-title">Craft - Evolve Full Zip</span><span class="path">Hem/craft-evolve-full-zip.html</span></a></li>
           <li><a class="link-item" href="./Hem/craft-evolve-pants.html"><span class="link-title">Craft Evolve Pants</span><span class="path">Hem/craft-evolve-pants.html</span></a></li>
